--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 steps:
 - task: CopyFiles@2
   inputs:
-    SourceFolder: '/microsoft.web/webapp-linux-managed-mysql'
+    SourceFolder: 'microsoft.web'
     Contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
    
