Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,8 @@ pool:
 steps:
 - task: CopyFiles@2
   inputs:
-    SourceFolder: 'microsoft.web'
+    SourceFolder: 'webapp-linux-managed-mysql'
+
     Contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
    
