--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 steps:
 - task: CopyFiles@2
   inputs:
-    SourceFolder: 'azure-quickstart-templates/quickstarts/microsoft.web/webapp-linux-managed-mysql'
+    SourceFolder: 'webapp-linux-managed-mysql'
 
     Contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
