--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ steps:
 - task: CopyFiles@2
   inputs:
     
-
+    SourceFolder: 'microsoft.web'
     Contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
    
