Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ steps:
     SourceFolder: 'webapp-linux-managed-mysql'
 
     Contents: '**\bin\**'
+    OverWrite: true
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
    
 - task: AzureResourceManagerTemplateDeployment@3
