--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,12 +13,13 @@ steps:
 
 - task: CopyFiles@2
   inputs:
-    
     SourceFolder: 'webapp-linux-managed-mysql'
-
-    Contents: '*.json'
-    OverWrite: true
+    Contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    CleanTargetFolder: true
+    OverWrite: true
+    flattenFolders: true
+    retryCount: '5'
    
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
