--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,15 +11,7 @@ pool:
 steps:
 
 
-- task: CopyFiles@2
-  inputs:
-    SourceFolder: 'webapp-linux-managed-mysql'
-    Contents: '**'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
-    CleanTargetFolder: true
-    OverWrite: true
-    flattenFolders: true
-    retryCount: '5'
+
    
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
@@ -30,8 +22,9 @@ steps:
     resourceGroupName: 'ARMPipelinesLAMP-rg'
     location: 'eastus'
     templateLocation: 'Linked artifact'
-    csmFile: '$(Build.ArtifactStagingDirectory)/azuredeploy.json'
-    csmParametersFile: '$(Build.ArtifactStagingDirectory)/azuredeploy.parameters.json'
+    
+    csmFileLink: https://github.com/Onemanwolf/azure-quickstart-templates/blob/master/quickstarts/microsoft.web/webapp-linux-managed-mysql/azuredeploy.json
+    csmParametersFileLink: https://github.com/Onemanwolf/azure-quickstart-templates/blob/master/quickstarts/microsoft.web/webapp-linux-managed-mysql/azuredeploy.parameters.json
     overrideParameters: '-siteName $(siteName) -administratorLogin $(adminUser) -administratorLoginPassword $(ARM_PASS)'
     deploymentMode: 'Incremental'
 
