--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,8 +23,8 @@ steps:
     location: 'eastus'
     templateLocation: 'Linked artifact'
     
-    csmFileLink: https://github.com/Onemanwolf/azure-quickstart-templates/blob/master/quickstarts/microsoft.web/webapp-linux-managed-mysql/azuredeploy.json
-    csmParametersFileLink: https://github.com/Onemanwolf/azure-quickstart-templates/blob/master/quickstarts/microsoft.web/webapp-linux-managed-mysql/azuredeploy.parameters.json
+    csmFileLink: 'https://github.com/Onemanwolf/azure-quickstart-templates/blob/master/quickstarts/microsoft.web/webapp-linux-managed-mysql/azuredeploy.json'
+    csmParametersFileLink: 'https://github.com/Onemanwolf/azure-quickstart-templates/blob/master/quickstarts/microsoft.web/webapp-linux-managed-mysql/azuredeploy.parameters.json'
     overrideParameters: '-siteName $(siteName) -administratorLogin $(adminUser) -administratorLoginPassword $(ARM_PASS)'
     deploymentMode: 'Incremental'
 
