--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
     action: 'Create Or Update Resource Group'
     resourceGroupName: 'ARMPipelinesLAMP-rg'
     location: 'eastus'
-    templateLocation: 'Url of the file'
+    templateLocation: 'Linked artifact'
     
     csmFileLink: 'https://github.com/Onemanwolf/azure-quickstart-templates/blob/master/quickstarts/microsoft.web/webapp-linux-managed-mysql/azuredeploy.json'
     csmParametersFileLink: 'https://github.com/Onemanwolf/azure-quickstart-templates/blob/master/quickstarts/microsoft.web/webapp-linux-managed-mysql/azuredeploy.parameters.json'
