Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 
 - task: CopyFiles@2
   inputs:
-   ## SourceFolder: 'webapp-linux-managed-mysql'
+    SourceFolder: 'Microsoft.Web'
     Contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
