--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 
 - task: CopyFiles@2
   inputs:
-    SourceFolder: 'quickstarts'
+    SourceFolder: 'quickstarts/microsoft.web'
     Contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
