--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -3,9 +3,33 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+variables:
+  ARM_PASS: $(adminPass)
+
+
 trigger:
 - master
 
 pool:
   vmImage: ubuntu-latest
 
+steps:
+  - task: CopyFiles@2
+    inputs:
+    SourceFolder: 'quickstarts/microsoft.web/web-app-sql-database/'
+    Contents: '\*\*'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+
+- task: AzureResourceManagerTemplateDeployment@3
+  inputs:
+    deploymentScope: 'Resource Group'
+    azureResourceManagerConnection: 'arm-deployment-service-connection'
+    subscriptionId: '6738d774-0014-4ded-842b-327158c8b568'
+    action: 'Create Or Update Resource Group'
+    resourceGroupName: 'ARMPipelinesLAMP-rg'
+    location: 'eastus'
+    templateLocation: 'Linked artifact'
+    csmFile: '$(Build.ArtifactStagingDirectory)/azuredeploy.json'
+    csmParametersFile: '$(Build.ArtifactStagingDirectory)/azuredeploy.parameters.json'
+    overrideParameters: '-skuName $(skuName) -skuCapacity $(skuCapacity) -administratorLogin $(administratorLogin) -administratorLoginPassword $(ARM_PASS)'
+    deploymentMode: 'Incremental'
